# algokit

./: .codecov.yml  .codespellignore  .coveragerc  .gitignore  .pre-commit-config.yaml  ACTOR_CRITIC_PYDANTIC_REFACTOR_SUMMARY.md  ADAPTIVE_CONTROLLER_UPGRADE_SUMMARY.md  ALGORITHM_FAMILY_DOCS_SUMMARY.md  API_REFERENCE_PAGES_SUMMARY.md  CHANGELOG.md  CI_WORKFLOW_REDESIGN.md  CLI_PLANNING.md  CLI_REFACTOR_GUIDE.md  CLI_REFACTOR_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  DQN_PYDANTIC_REFACTOR_SUMMARY.md  FEUDAL_RL_PYDANTIC_REFACTOR_SUMMARY.md  HIRO_COVERAGE_IMPROVEMENT.md  HIRO_PYDANTIC_REFACTOR_SUMMARY.md  MRAC_REFACTOR_SUMMARY.md  MSTAR_PYDANTIC_REFACTOR_SUMMARY.md  OPTIONS_FRAMEWORK_PYDANTIC_REFACTOR_SUMMARY.md  PID_REFACTOR_SUMMARY.md  POLICY_GRADIENT_PYDANTIC_REFACTOR_SUMMARY.md  PPO_PYDANTIC_REFACTOR_SUMMARY.md  PROJECT_STATUS.md  QUICK_STATUS.md  Q_LEARNING_PYDANTIC_REFACTOR_SUMMARY.md  README.md  RENDER_CLI_GUIDE.md  RL_TESTING_INFRASTRUCTURE.md  ROBUST_CONTROLLER_IMPROVEMENTS.md  SARSA_PYDANTIC_REFACTOR_SUMMARY.md  SECURITY.md  SESSION_SUMMARY.md  SLIDING_MODE_ENHANCEMENTS_SUMMARY.md  STRUCTURE_SETUP.md  TIMING_TRACKER_GUIDE.md  YAML_DOCUMENTATION_GUIDE.md  (+14 more)
.algokit/agloviz/: visible_algorithms.json  visible_families.json
.cursor/rules/: README.md  agent-os.mdc  ai-coding-standards.mdc  archon.mdc  create-spec.mdc  execute-tasks.mdc  plan-product.mdc  stuffit.mdc  testing-rules.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ci_nox.yml  codeql.yml  commitizen.yml  deploy-docs.yml  docs.yml  main.yml
assets/: README.md
data/examples/graphs/: README.md  harbor_small.json
data/examples/scenarios/: README.md  README_timing_config.md  bfs_timing_config.yaml  harbor_flood_small.yaml  harbor_storm_medium.yaml  tiny_test.yaml
docs/: SECURITY.md  api.md  classic-dp.md  classical-planning.md  contributing.md  dmps.md  families.md  gaussian-process.md  hrl.md  index.md  mpc.md  real-time-control.md  reinforcement-learning.md
docs-old/: README.md  index.md
docs-old/algorithms/control/: adaptive-control.md  h-infinity-control.md  pid-control.md  robust-control.md  sliding-mode-control.md
docs-old/algorithms/dmps/: basic-dmps.md
docs-old/algorithms/dynamic-programming/: coin-change.md  edit-distance.md  fibonacci.md  knapsack.md  longest-common-subsequence.md  (+1 more)
docs-old/families/: control.md  dynamic-programming.md  planning.md  reinforcement-learning.md
docs-old/macros/: README.md  __init__.py  data_loader.py  hooks.py  macro_loader.py  main.py  navigation.py  page_generator.py  plugin.py  utils.py
docs-old/templates/: algorithm-template-macro.md  algorithm-template.md
docs/algorithms/: options_framework_improvements.md
docs/control/: adaptive-control.md  pid-control.md
docs/dynamic-programming/: fibonacci.md  overview.md
docs/families/: dmps.md  gaussian-process.md  hierarchical-rl.md  mpc.md  real-time-control.md  reinforcement-learning.md
docs/javascripts/: mathjax-config.js  navigation-tooltips.js
docs/mpc/: linear-mpc.md
docs/styles/: custom.css
examples/: actor_critic_demo.py  adaptive_control_advanced_demo.py  astar_demo.py  bfs_custom_timing.py  bfs_timing_analysis.py  bfs_timing_demo.py  cli_demo.py  control_systems_demo.py  distance_utilities_demo.py  dqn_demo.py  dynamic_programming_demo.py  hiro_demo.py  mstar_demo.py  options_framework_demo.py  options_framework_refinements_demo.py  policy_gradient_demo.py  policy_gradient_improvements_demo.py  ppo_demo.py  q_learning_demo.py  q_learning_refactored_demo.py  sarsa_demo.py  sarsa_refactored_demo.py  timing_tracker_demo.py
macros/: main.py
mkdocs_plugins/: __init__.py  create_coming_soon_pages.py  gen_algorithms.py  gen_families.py  gen_pages.py
mkdocs_plugins/data/: README.md
mkdocs_plugins/macros/: family_macro.py
mkdocs_plugins/templates/: algorithm_page.md  example_family_page.md  family_page.md  index_page.md
notebooks/: README.md
planning/: chat_gpt_integration.md  docs_structure.md  mkdocs-macros-implementation-plan.md  process_doc.md  roadmap.md  template_system.md
scripts/: README.md  test-algorithms.py  validate_yaml.py
src/algokit/: __init__.py  classic_dp.py  py.typed
test_fix/: sarsa_model.pkl  sarsa_model_episode_100.pkl  sarsa_model_episode_170.pkl  sarsa_parameters.json  sarsa_parameters_episode_100.json
tests/: conftest.py
tests/classical_planning/: __init__.py
tests/cli/: __init__.py  conftest.py
tests/control/: __init__.py  test_adaptive.py  test_lqr.py  test_pid.py  test_robust.py  test_sliding_mode.py
tests/dmps/: __init__.py
tests/dynamic_programming/: __init__.py  test_coin_change.py  test_edit_distance.py  test_fibonacci.py  test_knapsack.py  test_longest_common_subsequence.py  test_matrix_chain_multiplication.py
tests/fixtures/: __init__.py
tests/gaussian_process/: __init__.py
tests/hierarchical_rl/: test_feudal_rl.py  test_hiro.py  test_options_framework.py
tests/hrl/: __init__.py
tests/mpc/: __init__.py
tests/pathfinding/: __init__.py  test_astar.py  test_bfs.py  test_bfs_event_streams.py  test_bfs_performance.py  test_bfs_properties.py  test_bfs_property_based.py  test_dfs.py  test_dfs_properties.py  test_dijkstra.py  test_dijkstra_properties.py  test_event_system.py  test_mstar.py  test_mstar_utilities.py
tests/real_time_control/: __init__.py
tests/reinforcement_learning/: __init__.py  test_actor_critic.py  test_dqn.py  test_policy_gradient.py  test_policy_gradient_coverage_fixed.py  test_policy_gradient_gae_fix.py  test_ppo.py  test_q_learning.py  test_q_learning_new_features.py  test_sarsa.py  test_sarsa_new_features.py
tests/unit/: test_example.py  test_fibonacci.py  test_snake_grid.py
viz/: README.md  setup.py
viz-source/: README.md  bfs_with_events.py  decorators.py  render.py
viz-source/viz/: adapters.py
viz/agloviz/: __init__.py  main.py
viz/scenes/: __init__.py
viz_tests/: __init__.py
viz_tests/pathfinding/: __init__.py  test_bfs_event_streams.py  test_bfs_with_events.py  test_event_system.py
(+298 files in other folders)
